# component-model-demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: run.yml
JS/: componentize.js  package-lock.json  package.json  rollup.config.js
JS/bundle/: index.bundled.js
JS/src/: index.js
Python/: build.sh  filter.py
Rust/: Cargo.toml
Rust/src/: bindings.rs  lib.rs
app/: Cargo.toml
app/src/: lib.rs
python/: main.py
runner/: Cargo.toml
runner/src/: main.rs
wit/: caller.wit  filter.wit  md-renderer.wit
wits/: markdown.wit  wasi_snapshot_preview1.wasm
